--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -115,19 +115,19 @@ span {
     position: relative;
 }
 
-/* .search-screen {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    transform: translateY(100%);
-    opacity: 0;
-    transition: transform 5s ease, opacity 5s ease;
-}
+@media only screen and (max-width: 768px) {
 
-.search-screen.slide-up {
-    transform: translateY(0%);
-    opacity: 1;
-} */
+
+    .nav-menu {
+        width: 200px;
+    }
+
+    .menu-bars {
+        margin-left: 1rem;
+    }
+
+    ul {
+        margin-left: -85px;
+    }
+
+}
