--- a/src/components/Newsletter/newsletter.css
+++ b/src/components/Newsletter/newsletter.css
@@ -111,14 +111,8 @@ h4 {
     }
 
     .newsletter-info button[type="submit"] {
-        padding: 7.5px 10px;
+        padding: 7.5px 5px;
+        width: 100px;
     }
 
 }
-
-/* 
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-text-align: center; */
