--- a/src/components/SingleProduct/singleProduct.css
+++ b/src/components/SingleProduct/singleProduct.css
@@ -124,7 +124,7 @@
 
       .availability button {
         padding: auto;
-        font-size: x-small;
+        font-size: small;
     }
 
     .related-products {
