--- a/src/components/SingleProduct/singleProduct.css
+++ b/src/components/SingleProduct/singleProduct.css
@@ -123,7 +123,8 @@
     }
 
       .availability button {
-        padding: auto;
+        padding-top: 7.5px;
+        padding-bottom: 7.5px;
         font-size: small;
     }
 
