--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -298,3 +298,9 @@
     background-color: #8e2de2;
     color: white;
 }
+
+@media only screen and (max-width: 768px) {
+    .empty-container .empty-button button {
+        height: 50px;
+    }
+}
