--- a/src/components/UI/loadingIndicator.css
+++ b/src/components/UI/loadingIndicator.css
@@ -1,6 +1,6 @@
 .lds-ring {
-    /* display: inline-block; */
-    position: relative;
+    display: inline-block;
+    /* position: relative; */
     display: flex;
     width: 80px;
     height: 80px;
