--- a/src/components/Orders/orders.css
+++ b/src/components/Orders/orders.css
@@ -4,12 +4,12 @@
     flex-direction: column;
     row-gap: 20px;
     margin: 3% auto 5%;
-
 }
 
 @media only screen and (max-width: 768px) {
     .orders-container {
         width: 92.5%;
+        margin-top: 30px;
     }
 }
 
@@ -31,6 +31,7 @@
     border: .5px solid #C0C0C0;
     border-radius: 7.5px;
     font-family: Roboto;
+    margin-bottom: 25px;
 }
 
 .order-item-top {
@@ -125,7 +126,7 @@
     margin-top: 5px;
 }
 
-/* .order-item-price .item-price div:first-child,
+.order-item-price .item-price div:first-child,
 .order-item-price .item-quantity div:first-child {
     font-weight: bolder;
 }
@@ -134,7 +135,7 @@
 .order-item-price .item-quantity div:last-child {
     color: #8e2de2;
     font-weight: bolder;
-} */
+}
 
 .order-item-total {
     display: flex;
@@ -157,6 +158,7 @@
 }
 
 @media only screen and (max-width: 768px) {
+
     .order-item-top {
         display: flex;
         flex-direction: column;
@@ -192,8 +194,13 @@
         max-width: 97.5%;
     }
 
+    .order-item-details img {
+        height: 90px;
+        width: 90px;
+    }
+
     .order-details-title {
-        font-size: 1.1rem;
+        font-size: 1rem;
         font-weight: 500;
         margin: auto;
     }
